--- a/angularapp/src/app/app.component.html
+++ b/angularapp/src/app/app.component.html
@@ -1,24 +1,27 @@
-﻿<h1 id="tableLabel">Weather forecast</h1>
-
-<p>This component demonstrates fetching data from the server.</p>
-
-<p *ngIf="!forecasts"><em>Loading... Please refresh once the ASP.NET backend has started. See <a href="https://aka.ms/jspsintegrationangular">https://aka.ms/jspsintegrationangular</a> for more details.</em></p>
-
-<table *ngIf="forecasts">
-    <thead>
-        <tr>
-            <th>Date</th>
-            <th>Temp. (C)</th>
-            <th>Temp. (F)</th>
-            <th>Summary</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let forecast of forecasts">
-            <td>{{ forecast.date }}</td>
-            <td>{{ forecast.temperatureC }}</td>
-            <td>{{ forecast.temperatureF }}</td>
-            <td>{{ forecast.summary }}</td>
-        </tr>
-    </tbody>
-</table>
+<div class="container">
+  <h2>Formulario de Compra de Tickets</h2>
+  <!--<form #formulario="ngForm" (ngSubmit)="comprarTicket(formulario)">-->
+  <form #formulario="ngForm">
+    <div class="form-group">
+      <label for="correo">Correo Electrónico:</label>
+      <input type="email" class="form-control" id="correo" name="correo" required [(ngModel)]="correo">
+    </div>
+    <div class="form-group">
+      <label for="evento">Evento:</label>
+      <select class="form-control" id="evento" name="evento" required [(ngModel)]="eventoSeleccionado">
+        <option *ngFor="let evento of eventos" [ngValue]="evento">{{ evento.nombre }}</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label for="fecha">Fecha:</label>
+      <input type="date" class="form-control" id="fecha" name="fecha" required [(ngModel)]="fecha">
+    </div>
+    <div class="form-group">
+      <label for="horario">Horario:</label>
+      <select class="form-control" id="horario" name="horario" required [(ngModel)]="horarioSeleccionado">
+        <option *ngFor="let horario of eventoSeleccionado?.horarios">{{ horario }}</option>
+      </select>
+    </div>
+    <button type="button" class="btn btn-primary" (click)="comprarTicket(formulario)">Comprar Ticket</button>
+  </form>
+</div>
