--- a/angularapp/src/app/componentes/ticket/ticket.component.html
+++ b/angularapp/src/app/componentes/ticket/ticket.component.html
@@ -1,28 +1,33 @@
 <div class="container" style="background-color:white;">
   <h2>Formulario de Compra de Tickets</h2>
-  <!--<form #formulario="ngForm" (ngSubmit)="comprarTicket(formulario)">-->
-  <form #formTicket="ngForm" [formGroup]="formulario" (ngSubmit)="comprarTicket(formulario)">
+
+  <form [formGroup]="formTicket" (submit)="comprarTicket()">
+
     <div class="form-group">
       <label for="correo">Correo Electrónico:</label>
-      <input type="email" class="form-control" formControlName="correo" id="correo" name="correo" required [(ngModel)]="correo">
+      <input type="email" class="form-control" formControlName="correo">
     </div>
+
     <div class="form-group">
       <label for="evento">Evento:</label>
-      <select class="form-control" id="evento" name="evento" required [(ngModel)]="eventoSeleccionado">
-        <option *ngFor="let evento of eventos" [ngValue]="evento">{{ evento.nombre }}</option>
+      <select class="form-control" formControlName="evento">
+        <option [value]="item" *ngFor="let item of eventos">{{item}}</option>
       </select>
     </div>
+
     <div class="form-group">
       <label for="fecha">Fecha:</label>
-      <input type="date" class="form-control" formControlName="fecha" id="fecha" name="fecha" required [(ngModel)]="fecha">
+      <input type="date" class="form-control" formControlName="fecha">
     </div>
+
     <div class="form-group">
       <label for="horario">Horario:</label>
-      <select class="form-control" id="horario" name="horario" required [(ngModel)]="horarioSeleccionado">
-        <option *ngFor="let horario of eventoSeleccionado?.horarios">{{ horario }}</option>
+      <select class="form-control" formControlName="horario">
+        <option [value]="item" *ngFor="let item of horarios">{{item}}></option> 
       </select>
     </div>
-    <button type="button" class="btn btn-primary">Comprar Ticket</button>
-    <!--<button type="button" class="btn btn-primary" (click)="comprarTicket(formulario)">Comprar Ticket</button>-->
+
+    <button type="submit" class="btn btn-primary">Comprar Ticket</button>
+
   </form>
 </div>
