--- a/angularapp/src/app/componentes/ticket/ticket.component.css
+++ b/angularapp/src/app/componentes/ticket/ticket.component.css
@@ -1,43 +1,57 @@
-/* You can add global styles to this file, and also import other style files */
 .container {
-  justify-content: center;
-  align-items: center;
-  font-family: sans-serif;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  border-radius: 5px;
-  box-shadow: 1px 2px 3px 4px rgba(12,12,12,0.2);
-  padding: 3%;
+  max-width: 550px;
+  margin: 0 auto;
+  padding: 20px;
+  border-radius: 8px;
+  backdrop-filter: blur(10px); /* Agregar desenfoque */
 }
 
 .form-group {
-  margin: 3%;
+  margin-bottom: 20px;
 }
 
+label {
+  font-weight: bold;
+}
 
-.btn-primary {
-  background-color: white;
-  color: black;
-  border: 2px solid #555555;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
+.input-group {
+  position: relative;
+}
+
+.input-group input[type="date"],
+.input-group select {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ced4da;
+  border-radius: 5px;
+  appearance: none;
+}
+
+.btn {
+  display: block;
+  width: 100%;
+  padding: 10px;
   font-size: 16px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
+  border: none;
+  border-radius: 5px;
+  background-color: #007bff;
+  color: #fff;
   cursor: pointer;
+  box-shadow: 0 2px 4px rgba(0.5, 0.5, 2, 2); /* Agregar sombra */
+  transition: transform 0.3s ease; /* Agregar efecto de transición */
 }
 
+.btn:hover {
+  transform: translateY(-2px); /* Efecto de levantamiento al pasar el mouse */
+}
 
-  .btn-primary:hover {
-    background-color: #555555;
-    color: white;
+@media (max-width: 768px) {
+  .container {
+    max-width: 100%;
+    padding: 10px;
   }
+}
 
-input {
-  margin: 2%;
+.text-silver {
+  color: rgb(247, 244, 244) !important;
 }
